--- a/SBMS_8c.ioc
+++ b/SBMS_8c.ioc
@@ -1,18 +1,24 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
-ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_4
-ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_6
-ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_7
-ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_8
-ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_9
-ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR
+ADC1.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_8
+ADC1.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC1.Channel-12\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR
+ADC1.Channel-13\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_4
+ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_6
+ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_7
 ADC1.ContinuousConvMode=ENABLE
-ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversion,ContinuousConvMode,master,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion
-ADC1.NbrOfConversion=9
+ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversion,ContinuousConvMode,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,master,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,Rank-13\#ChannelRegularConversion,Channel-13\#ChannelRegularConversion,SamplingTime-13\#ChannelRegularConversion
+ADC1.NbrOfConversion=12
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-10\#ChannelRegularConversion=9
+ADC1.Rank-11\#ChannelRegularConversion=10
+ADC1.Rank-12\#ChannelRegularConversion=11
+ADC1.Rank-13\#ChannelRegularConversion=12
 ADC1.Rank-2\#ChannelRegularConversion=1
 ADC1.Rank-3\#ChannelRegularConversion=2
 ADC1.Rank-4\#ChannelRegularConversion=3
@@ -22,6 +28,9 @@ ADC1.Rank-7\#ChannelRegularConversion=6
 ADC1.Rank-8\#ChannelRegularConversion=7
 ADC1.Rank-9\#ChannelRegularConversion=8
 ADC1.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
+ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-12\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-13\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
@@ -53,47 +62,51 @@ Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM7
 Mcu.IP6=USART1
-Mcu.IP7=USART2
+Mcu.IP7=USART3
 Mcu.IPNb=8
 Mcu.Name=STM32F100C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PA7
-Mcu.Pin11=PB0
-Mcu.Pin12=PB1
-Mcu.Pin13=PB10
-Mcu.Pin14=PB11
-Mcu.Pin15=PB12
-Mcu.Pin16=PB13
-Mcu.Pin17=PB14
-Mcu.Pin18=PB15
-Mcu.Pin19=PA9
-Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=PA10
-Mcu.Pin21=PA11
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=PA15
-Mcu.Pin25=PB3
-Mcu.Pin26=PB4
-Mcu.Pin27=PB5
-Mcu.Pin28=PB6
-Mcu.Pin29=PB7
-Mcu.Pin3=PA0-WKUP
-Mcu.Pin30=PB8
-Mcu.Pin31=PB9
-Mcu.Pin32=VP_ADC1_TempSens_Input
-Mcu.Pin33=VP_ADC1_Vref_Input
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin35=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin4=PA1
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA4
-Mcu.Pin8=PA5
-Mcu.Pin9=PA6
-Mcu.PinsNb=36
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PB0
+Mcu.Pin14=PB1
+Mcu.Pin15=PB10
+Mcu.Pin16=PB11
+Mcu.Pin17=PB12
+Mcu.Pin18=PB13
+Mcu.Pin19=PB14
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PB15
+Mcu.Pin21=PA8
+Mcu.Pin22=PA9
+Mcu.Pin23=PA10
+Mcu.Pin24=PA11
+Mcu.Pin25=PA12
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
+Mcu.Pin28=PA15
+Mcu.Pin29=PB3
+Mcu.Pin3=PD0-OSC_IN
+Mcu.Pin30=PB4
+Mcu.Pin31=PB5
+Mcu.Pin32=PB6
+Mcu.Pin33=PB7
+Mcu.Pin34=PB8
+Mcu.Pin35=PB9
+Mcu.Pin36=VP_ADC1_TempSens_Input
+Mcu.Pin37=VP_ADC1_Vref_Input
+Mcu.Pin38=VP_SYS_VS_Systick
+Mcu.Pin39=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin4=PD1-OSC_OUT
+Mcu.Pin5=PA0-WKUP
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA4
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F100C8Tx
@@ -112,70 +125,54 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA0-WKUP.GPIOParameters=GPIO_Label
-PA0-WKUP.GPIO_Label=on_off
-PA0-WKUP.Locked=true
-PA0-WKUP.Signal=GPIO_Output
+PA0-WKUP.Signal=ADCx_IN0
 PA1.Signal=ADCx_IN1
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA11.GPIO_Label=Enroll button
-PA11.GPIO_PuPd=GPIO_PULLUP
 PA11.Locked=true
-PA11.Signal=GPIO_Input
+PA11.Signal=GPIO_Output
+PA12.Locked=true
+PA12.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA15.Locked=true
 PA15.Signal=GPIO_Output
-PA2.Mode=Asynchronous
-PA2.Signal=USART2_TX
-PA3.Mode=Asynchronous
-PA3.Signal=USART2_RX
+PA2.Signal=ADCx_IN2
+PA3.Signal=ADCx_IN3
 PA4.Signal=ADCx_IN4
 PA5.Signal=ADCx_IN5
 PA6.Signal=ADCx_IN6
 PA7.Signal=ADCx_IN7
+PA8.Locked=true
+PA8.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.Signal=ADCx_IN8
 PB1.Signal=ADCx_IN9
-PB10.Locked=true
-PB10.Signal=GPIO_Output
-PB11.Locked=true
-PB11.Signal=GPIO_Output
+PB10.Mode=Asynchronous
+PB10.Signal=USART3_TX
+PB11.Mode=Asynchronous
+PB11.Signal=USART3_RX
 PB12.Locked=true
 PB12.Signal=GPIO_Output
 PB13.Locked=true
 PB13.Signal=GPIO_Output
 PB14.Locked=true
 PB14.Signal=GPIO_Output
-PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=ffonotrau
 PB15.Locked=true
 PB15.Signal=GPIO_Output
-PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=Enroll
 PB3.Locked=true
-PB3.Signal=GPIO_Output
-PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=Fault
+PB3.Signal=GPIO_Input
 PB4.Locked=true
 PB4.Signal=GPIO_Output
-PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=Charge
 PB5.Locked=true
 PB5.Signal=GPIO_Output
-PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=Disacharge
 PB6.Locked=true
 PB6.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=Battery Level
 PB7.Locked=true
 PB7.Signal=GPIO_Output
 PB8.Locked=true
@@ -184,6 +181,10 @@ PB9.Locked=true
 PB9.Signal=GPIO_Output
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Output
+PC14-OSC32_IN.Locked=true
+PC14-OSC32_IN.Signal=GPIO_Input
+PC15-OSC32_OUT.Locked=true
+PC15-OSC32_OUT.Signal=GPIO_Input
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -216,7 +217,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-MX_DMA_Init-DMA-false-LL-true,3-SystemClock_Config-RCC-false-LL-false,4-MX_ADC1_Init-ADC1-false-LL-true,5-MX_USART1_UART_Init-USART1-false-LL-true,6-MX_TIM7_Init-TIM7-false-LL-true,7-MX_USART2_UART_Init-USART2-false-LL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-MX_DMA_Init-DMA-false-LL-true,3-SystemClock_Config-RCC-false-LL-false,4-MX_ADC1_Init-ADC1-false-LL-true,5-MX_USART1_UART_Init-USART1-false-LL-true,6-MX_TIM7_Init-TIM7-false-LL-true,7-MX_USART3_UART_Init-USART3-false-LL-true
 RCC.ADCFreqValue=12000000
 RCC.AHBFreq_Value=24000000
 RCC.APB1Freq_Value=24000000
@@ -236,8 +237,14 @@ RCC.SYSCLKFreq_VALUE=24000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=24000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.ADCx_IN0.0=ADC1_IN0,IN0
+SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
+SH.ADCx_IN2.0=ADC1_IN2,IN2
+SH.ADCx_IN2.ConfNb=1
+SH.ADCx_IN3.0=ADC1_IN3,IN3
+SH.ADCx_IN3.ConfNb=1
 SH.ADCx_IN4.0=ADC1_IN4,IN4
 SH.ADCx_IN4.ConfNb=1
 SH.ADCx_IN5.0=ADC1_IN5,IN5
@@ -257,9 +264,9 @@ TIM7.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART1.BaudRate=38400
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
-USART2.BaudRate=38400
-USART2.IPParameters=VirtualMode,BaudRate
-USART2.VirtualMode=VM_ASYNC
+USART3.BaudRate=38400
+USART3.IPParameters=VirtualMode,BaudRate
+USART3.VirtualMode=VM_ASYNC
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_ADC1_Vref_Input.Mode=IN-Vrefint
