--- a/SBMS_8c.ioc
+++ b/SBMS_8c.ioc
@@ -1,19 +1,21 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32F1
+NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 ProjectManager.MainLocation=Core/Src
 RCC.MCOFreq_Value=24000000
 USART2.IPParameters=VirtualMode,BaudRate
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F100C8Tx
+PB10.Mode=Asynchronous
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
 ADC1.ContinuousConvMode=ENABLE
 USART1.BaudRate=38400
 ADC1.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 RCC.PLLCLKFreq_Value=24000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-MX_DMA_Init-DMA-false-LL-true,3-SystemClock_Config-RCC-false-LL-false,4-MX_ADC1_Init-ADC1-false-LL-true,5-MX_USART1_UART_Init-USART1-false-LL-true,6-MX_TIM7_Init-TIM7-false-LL-true,7-MX_USART2_UART_Init-USART2-false-LL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-MX_DMA_Init-DMA-false-LL-true,3-SystemClock_Config-RCC-false-LL-false,4-MX_ADC1_Init-ADC1-false-LL-true,5-MX_USART1_UART_Init-USART1-false-LL-true,6-MX_TIM7_Init-TIM7-false-LL-true,7-MX_USART2_UART_Init-USART2-false-LL-true,8-MX_USART3_UART_Init-USART3-false-LL-true
 RCC.ADCFreqValue=12000000
 USART1.IPParameters=VirtualMode,BaudRate
-PB11.Signal=GPIO_Output
+PB11.Signal=USART3_RX
 PB13.Signal=GPIO_Output
 PB15.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
@@ -33,12 +35,13 @@ Mcu.IP0=ADC1
 PA12.Locked=true
 Mcu.IP1=DMA
 PA12.Signal=GPIO_Output
+USART3.BaudRate=38400
 Mcu.UserConstants=
 ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_6
 Mcu.ThirdPartyNb=0
 ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_4
 RCC.HCLKFreq_Value=24000000
-Mcu.IPNb=8
+Mcu.IPNb=9
 ProjectManager.PreviousToolchain=STM32CubeIDE
 RCC.APB2TimFreq_Value=24000000
 PB6.Signal=GPIO_Output
@@ -99,6 +102,7 @@ PA6.Signal=ADCx_IN6
 USART2.VirtualMode=VM_ASYNC
 ProjectManager.ToolChainLocation=
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+USART3.IPParameters=VirtualMode,BaudRate
 PA10.Signal=USART1_RX
 PA15.Signal=GPIO_Output
 SH.ADCx_IN9.0=ADC1_IN9,IN9
@@ -137,7 +141,6 @@ PB12.Locked=true
 ProjectManager.DeletePrevious=true
 PB14.Locked=true
 PC14-OSC32_IN.Signal=GPIO_Input
-PB10.Locked=true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 USART2.BaudRate=38400
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
@@ -153,6 +156,7 @@ PA15.Locked=true
 PA11.Locked=true
 PA9.Mode=Asynchronous
 PC15-OSC32_OUT.Locked=true
+PB11.Mode=Asynchronous
 ProjectManager.TargetToolchain=STM32CubeIDE
 SH.ADCx_IN7.0=ADC1_IN7,IN7
 Dma.ADC1.0.Mode=DMA_CIRCULAR
@@ -165,7 +169,7 @@ PC13-TAMPER-RTC.Locked=true
 PC15-OSC32_OUT.Signal=GPIO_Input
 PA1.Signal=ADCx_IN1
 PD0-OSC_IN.Mode=HSE-External-Oscillator
-PB10.Signal=GPIO_Output
+PB10.Signal=USART3_TX
 PB14.Signal=GPIO_Output
 PA5.Signal=ADCx_IN5
 TIM7.Prescaler=24000
@@ -206,6 +210,7 @@ PA2.Signal=USART2_TX
 Mcu.Pin24=PA11
 ProjectManager.UnderRoot=true
 Mcu.Pin25=PA12
+Mcu.IP8=USART3
 ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR
 Mcu.Pin28=PA15
 Mcu.IP6=USART1
@@ -227,6 +232,7 @@ ADC1.Rank-3\#ChannelRegularConversion=2
 ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
+USART3.VirtualMode=VM_ASYNC
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 USART1.VirtualMode=VM_ASYNC
 ProjectManager.CompilerOptimize=6
@@ -260,7 +266,6 @@ ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 RCC.APB1Freq_Value=24000000
 PB0.Signal=ADCx_IN8
-PB11.Locked=true
 ADC1.Rank-5\#ChannelRegularConversion=4
 ProjectManager.DeviceId=STM32F100C8Tx
 PB12.Signal=GPIO_Output
