--- a/SBMS_8c.ioc
+++ b/SBMS_8c.ioc
@@ -9,16 +9,18 @@ PB10.Mode=Asynchronous
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
 ADC1.ContinuousConvMode=ENABLE
 USART1.BaudRate=38400
+SH.ADCx_IN2.0=ADC1_IN2,IN2
 ADC1.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 RCC.PLLCLKFreq_Value=24000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-MX_DMA_Init-DMA-false-LL-true,3-SystemClock_Config-RCC-false-LL-false,4-MX_ADC1_Init-ADC1-false-LL-true,5-MX_USART1_UART_Init-USART1-false-LL-true,6-MX_TIM7_Init-TIM7-false-LL-true,7-MX_USART2_UART_Init-USART2-false-LL-true,8-MX_USART3_UART_Init-USART3-false-LL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-MX_DMA_Init-DMA-false-LL-true,3-SystemClock_Config-RCC-false-LL-false,4-MX_ADC1_Init-ADC1-false-LL-true,5-MX_USART1_UART_Init-USART1-false-LL-true,6-MX_TIM7_Init-TIM7-false-LL-true,7-MX_USART3_UART_Init-USART3-false-LL-true
 RCC.ADCFreqValue=12000000
 USART1.IPParameters=VirtualMode,BaudRate
 PB11.Signal=USART3_RX
+ADC1.SamplingTime-12\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 PB13.Signal=GPIO_Output
 PB15.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
-ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_6
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
 RCC.PLLSource=RCC_PLLSOURCE_HSE
@@ -36,22 +38,25 @@ Mcu.IP1=DMA
 PA12.Signal=GPIO_Output
 USART3.BaudRate=38400
 Mcu.UserConstants=
-ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_6
+ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.Rank-11\#ChannelRegularConversion=10
 Mcu.ThirdPartyNb=0
-ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_4
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_1
 RCC.HCLKFreq_Value=24000000
+SH.ADCx_IN3.0=ADC1_IN3,IN3
 Mcu.IPNb=8
 ProjectManager.PreviousToolchain=STM32CubeIDE
 RCC.APB2TimFreq_Value=24000000
 PB6.Signal=GPIO_Output
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
-ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_0
+SH.ADCx_IN3.ConfNb=1
 SH.ADCx_IN7.ConfNb=1
 Mcu.Pin6=PA1
 TIM7.Period=10
-Mcu.Pin7=PA4
-Mcu.Pin8=PA5
-Mcu.Pin9=PA6
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA4
 Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 RCC.AHBFreq_Value=24000000
 PB13.Locked=true
@@ -61,7 +66,6 @@ GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PD0-OSC_IN
 Mcu.Pin4=PD1-OSC_OUT
-PA0-WKUP.GPIOParameters=GPIO_Label
 Mcu.Pin5=PA0-WKUP
 ProjectManager.ProjectBuild=false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -73,7 +77,7 @@ ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.3
 VP_ADC1_Vref_Input.Mode=IN-Vrefint
 ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 MxDb.Version=DB.6.0.20
-ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_7
+ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_4
 VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 ADC1.Rank-2\#ChannelRegularConversion=1
 ProjectManager.BackupPrevious=false
@@ -83,8 +87,9 @@ Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 File.Version=6
 SH.ADCx_IN8.0=ADC1_IN8,IN8
 PB7.Signal=GPIO_Output
-PB8.Locked=true
 PA8.Signal=GPIO_Output
+PB8.Locked=true
+SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN4.ConfNb=1
 PB6.Locked=true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -96,10 +101,13 @@ ProjectManager.ProjectName=SBMS_8c
 RCC.PLLMCOFreq_Value=12000000
 Mcu.Package=LQFP48
 PB9.Signal=GPIO_Output
+ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 PB1.Signal=ADCx_IN9
 PA6.Signal=ADCx_IN6
+ADC1.SamplingTime-13\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 ProjectManager.ToolChainLocation=
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+ADC1.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_9
 USART3.IPParameters=VirtualMode,BaudRate
 PA10.Signal=USART1_RX
 PA15.Signal=GPIO_Output
@@ -119,32 +127,33 @@ ADC1.Rank-4\#ChannelRegularConversion=3
 PB15.Locked=true
 PB3.Locked=true
 PB4.Signal=GPIO_Output
-ADC1.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
+PA3.Signal=ADCx_IN3
+ADC1.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_8
 ProjectManager.ProjectFileName=SBMS_8c.ioc
 Dma.ADC1.0.Instance=DMA1_Channel1
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
-ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_2
 PA10.Mode=Asynchronous
-Mcu.PinsNb=38
+Mcu.PinsNb=40
 ADC1.Rank-10\#ChannelRegularConversion=9
 ProjectManager.NoMain=false
 SH.ADCx_IN6.0=ADC1_IN6,IN6
-ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversion,ContinuousConvMode,master,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion
+ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversion,ContinuousConvMode,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,master,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,Rank-13\#ChannelRegularConversion,Channel-13\#ChannelRegularConversion,SamplingTime-13\#ChannelRegularConversion
 ADC1.Rank-8\#ChannelRegularConversion=7
 PC13-TAMPER-RTC.Signal=GPIO_Output
 ProjectManager.DefaultFWLocation=true
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PB12.Locked=true
 ProjectManager.DeletePrevious=true
+ADC1.Channel-13\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
 PB14.Locked=true
 PC14-OSC32_IN.Signal=GPIO_Input
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 RCC.FamilyName=M
-PA0-WKUP.GPIO_Label=on_off
-PA0-WKUP.Signal=GPIO_Output
-ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_8
-PA0-WKUP.Locked=true
+PA0-WKUP.Signal=ADCx_IN0
+ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_5
 PA13.Signal=SYS_JTMS-SWDIO
+ADC1.Rank-13\#ChannelRegularConversion=12
 Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 PA15.Locked=true
 PA11.Locked=true
@@ -168,43 +177,50 @@ PB14.Signal=GPIO_Output
 PA5.Signal=ADCx_IN5
 TIM7.Prescaler=24000
 board=custom
+ADC1.Rank-12\#ChannelRegularConversion=11
 ProjectManager.LastFirmware=true
 RCC.VCOOutput2Freq_Value=8000000
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+ADC1.Channel-12\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR
 RCC.APB2Freq_Value=24000000
 TIM7.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
 MxCube.Version=6.2.0
-Mcu.Pin37=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin35=VP_ADC1_Vref_Input
-Mcu.Pin36=VP_SYS_VS_Systick
+Mcu.Pin37=VP_ADC1_Vref_Input
+Mcu.Pin38=VP_SYS_VS_Systick
+Mcu.Pin35=PB9
+Mcu.Pin36=VP_ADC1_TempSens_Input
+SH.ADCx_IN0.ConfNb=1
+Mcu.Pin39=VP_TIM7_VS_ClockSourceINT
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
-Mcu.Pin30=PB6
+SH.ADCx_IN2.ConfNb=1
+Mcu.Pin30=PB4
 VP_SYS_VS_Systick.Mode=SysTick
-Mcu.Pin33=PB9
+Mcu.Pin33=PB7
 VP_ADC1_Vref_Input.Signal=ADC1_Vref_Input
-Mcu.Pin34=VP_ADC1_TempSens_Input
-Mcu.Pin31=PB7
+Mcu.Pin34=PB8
+Mcu.Pin31=PB5
 SH.ADCx_IN4.0=ADC1_IN4,IN4
-Mcu.Pin32=PB8
+Mcu.Pin32=PB6
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ADC1.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 SH.ADCx_IN8.ConfNb=1
 ADC1.Rank-9\#ChannelRegularConversion=8
-ADC1.NbrOfConversion=9
+ADC1.NbrOfConversion=12
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSource,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,VCOOutput2Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F100C(8-B)Tx
-Mcu.Pin26=PA15
-Mcu.Pin27=PB3
-Mcu.Pin24=PA13
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
+PA2.Signal=ADCx_IN2
+Mcu.Pin24=PA11
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PA14
-ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR
-Mcu.Pin28=PB4
+Mcu.Pin25=PA12
+ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_7
+Mcu.Pin28=PA15
 Mcu.IP6=USART1
-Mcu.Pin29=PB5
+Mcu.Pin29=PB3
 Mcu.IP7=USART3
 ProjectManager.CoupleFile=false
 PB4.Locked=true
@@ -212,12 +228,12 @@ PB3.Signal=GPIO_Input
 PA4.Signal=ADCx_IN4
 RCC.SYSCLKFreq_VALUE=24000000
 PB5.Signal=GPIO_Output
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
+Mcu.Pin22=PA9
+Mcu.Pin23=PA10
 RCC.TimSysFreq_Value=24000000
-Mcu.Pin20=PA9
+Mcu.Pin20=PB15
 ADC1.master=1
-Mcu.Pin21=PA10
+Mcu.Pin21=PA8
 ADC1.Rank-3\#ChannelRegularConversion=2
 ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 NVIC.ForceEnableDMAVector=true
@@ -230,23 +246,23 @@ PA11.Signal=GPIO_Output
 PA14.Signal=SYS_JTCK-SWCLK
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PB12
+Mcu.Pin15=PB10
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PB13
-Mcu.Pin13=PB10
-Mcu.Pin14=PB11
-Mcu.Pin19=PA8
+Mcu.Pin16=PB11
+Mcu.Pin13=PB0
+Mcu.Pin14=PB1
+Mcu.Pin19=PB14
 ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PB14
-Mcu.Pin18=PB15
+Mcu.Pin17=PB12
+Mcu.Pin18=PB13
 SH.ADCx_IN5.0=ADC1_IN5,IN5
 ADC1.Rank-7\#ChannelRegularConversion=6
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 ADC1.NbrOfConversionFlag=1
-Mcu.Pin11=PB0
-Mcu.Pin12=PB1
-Mcu.Pin10=PA7
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin10=PA5
 PB7.Locked=true
 PB8.Signal=GPIO_Output
 SH.ADCx_IN5.ConfNb=1
