--- a/SBMS_8c.ioc
+++ b/SBMS_8c.ioc
@@ -39,8 +39,8 @@ PA12.Signal=GPIO_Output
 USART3.BaudRate=38400
 Mcu.UserConstants=
 ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.Rank-11\#ChannelRegularConversion=10
 Mcu.ThirdPartyNb=0
+ADC1.Rank-11\#ChannelRegularConversion=10
 ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_1
 RCC.HCLKFreq_Value=24000000
 SH.ADCx_IN3.0=ADC1_IN3,IN3
@@ -52,6 +52,7 @@ Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_0
 SH.ADCx_IN3.ConfNb=1
 SH.ADCx_IN7.ConfNb=1
+PB15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 Mcu.Pin6=PA1
 TIM7.Period=10
 Mcu.Pin7=PA2
@@ -113,9 +114,11 @@ PA10.Signal=USART1_RX
 PA15.Signal=GPIO_Output
 SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN1.0=ADC1_IN1,IN1
+PC15-OSC32_OUT.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 RCC.APB1TimFreq_Value=24000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 SH.ADCx_IN9.ConfNb=1
+PC15-OSC32_OUT.GPIOParameters=GPIO_ModeDefaultOutputPP
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 ADC1.Rank-6\#ChannelRegularConversion=5
 Dma.Request0=ADC1
@@ -169,7 +172,7 @@ PB5.Locked=true
 PB9.Locked=true
 ProjectManager.RegisterCallBack=
 PC13-TAMPER-RTC.Locked=true
-PC15-OSC32_OUT.Signal=GPIO_Input
+PC15-OSC32_OUT.Signal=GPIO_Output
 PA1.Signal=ADCx_IN1
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PB10.Signal=USART3_TX
@@ -178,7 +181,7 @@ PA5.Signal=ADCx_IN5
 TIM7.Prescaler=24000
 board=custom
 ADC1.Rank-12\#ChannelRegularConversion=11
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 RCC.VCOOutput2Freq_Value=8000000
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 ADC1.Channel-12\#ChannelRegularConversion=ADC_CHANNEL_TEMPSENSOR
@@ -205,6 +208,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ADC1.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 SH.ADCx_IN8.ConfNb=1
 ADC1.Rank-9\#ChannelRegularConversion=8
+PB15.GPIOParameters=GPIO_ModeDefaultOutputPP
 ADC1.NbrOfConversion=12
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
